fix: изменение структуры данных хранения истории просмотров задач.